# hangul-mcp

./: .gitignore  Cargo.toml  README.md  build.rs  demo.hwpx  report.hwpx
docs/: roadmap.md
src/: lib.rs  main.rs  server.rs  store.rs
tests/: roundtrip.rs
