[package]
name = "hangul-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for editing HWPX documents, built on rhwp"
license = "MIT"

[dependencies]
rhwp = { git = "https://github.com/physwkim/rhwp", rev = "9f5b4844" }
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
